--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,46 @@
 }
 
 
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loading-spinner {
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #383636; /* Black */
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+}
+
+.dreamsDropDown {
+  position: relative;
+}
+
+.dreamsDropDownSpanOff{
+  position: absolute;
+  transform: scaleY(0);
+  /*position: absolute;*/
+  /*top: -1000px;*/
+}
+
+@keyframes animationto {
+  0%   {height: 0}
+  100% {height: 200px}
+}
+
+
+.dreamsDropDownSpanOn{
+  transform-origin: top;
+  transition: transform 1s ease;
+  animation-duration: 1s;
+  transform: scaleY(1);
+  animation-name: animationto;
+}
+
